using Marten;
using MESNET.Common.Shared;
using MESNET.Institution.Application.Commands;
using MESNET.Institution.Application.Dtos;
using MESNET.Institution.Application.Errors;
using MESNET.Institution.Application.Extensions;
using MESNET.Institution.Shared.Events;
using Microsoft.AspNetCore.Http;
using Wolverine;
using Wolverine.Http;

namespace MESNET.Institution.Api;

public static class InstitutionEndpoints
{
    [WolverineGet("/api/institutions/{institutionId}")]
    public static async Task<IResult> Get(Guid institutionId, IQuerySession session)
    {
        var institution = await session.LoadAsync<Core.Entities.Institution>(institutionId);
        if (institution is null)
            return Results.NotFound(ResponseBuilder.Fail(404)
                .AddMessage(InstitutionErrors.NotFound(institutionId).Description)
                .AddErrors(InstitutionErrors.NotFound(institutionId))
                .Build());

        return Results.Ok(ResponseBuilder.Success()
            .AddData(institution.ToDto())
            .Build());
    }

    [WolverinePost("/api/institutions")]
    public static async Task<IResult> Post(
        CreateInstitution command, IDocumentSession session, IMessageBus bus)
    {
        var institution = new Core.Entities.Institution
        {
            Id = Guid.NewGuid(),
            TenantId = command.TenantId,
            InstitutionCode = command.InstitutionCode,
            FullName = command.FullName,
            Address = command.Address,
            PhoneNumber = command.PhoneNumber,
            Email = command.Email,
            WebUrl = command.WebUrl,
            Location = command.Location
        };

        session.Store(institution);

        await bus.PublishAsync(
            new InstitutionUpdated(institution.Id, institution.FullName, institution.Location));

        return Results.Created($"/api/institutions/{institution.Id}",
            ResponseBuilder.Success(201)
                .AddData(institution.ToDto())
                .AddMessage("Kurum oluşturuldu.")
                .Build());
    }

    [WolverinePut("/api/institutions/{institutionId}")]
    public static async Task<IResult> Put(
        Guid institutionId, UpdateInstitution command, IDocumentSession session, IMessageBus bus)
    {
        var institution = await session.LoadAsync<Core.Entities.Institution>(institutionId);
        if (institution is null)
            return Results.NotFound(ResponseBuilder.Fail(404)
                .AddMessage(InstitutionErrors.NotFound(institutionId).Description)
                .AddErrors(InstitutionErrors.NotFound(institutionId))
                .Build());

        institution.FullName = command.FullName;
        institution.Address = command.Address;
        institution.PhoneNumber = command.PhoneNumber;
        institution.Email = command.Email;
        institution.WebUrl = command.WebUrl;
        institution.Location = command.Location;

        session.Store(institution);

        await bus.PublishAsync(
            new InstitutionUpdated(institution.Id, institution.FullName, institution.Location));

        return Results.Ok(ResponseBuilder.Success()
            .AddMessage("Kurum bilgileri güncellendi.")
            .Build());
    }

    [WolverinePost("/api/institutions/{institutionId}/staff")]
    public static async Task<IResult> PostStaff(
        Guid institutionId, AuthorizeStaff command, IDocumentSession session, IMessageBus bus)
    {
        var institution = await session.LoadAsync<Core.Entities.Institution>(institutionId);
        if (institution is null)
            return Results.NotFound(ResponseBuilder.Fail(404)
                .AddMessage(InstitutionErrors.NotFound(institutionId).Description)
                .AddErrors(InstitutionErrors.NotFound(institutionId))
                .Build());

        var staff = new Core.ValueObjects.StaffMember
        {
            KeycloakId = command.KeycloakId,
            FullName = command.FullName,
            Role = command.Role,
            BranchCode = command.BranchCode
        };

        institution.Staff.Add(staff);
        session.Store(institution);

        await bus.PublishAsync(
            new StaffAuthorized(institution.Id, staff.Id, staff.Role, staff.BranchCode));

        return Results.Created(
            $"/api/institutions/{institutionId}/staff/{staff.Id}",
            ResponseBuilder.Success(201)
                .AddData(new { staffId = staff.Id })
                .AddMessage("Personel yetkilendirildi.")
                .Build());
    }
}
